--- a/css/styleSignin.css
+++ b/css/styleSignin.css
@@ -29,7 +29,7 @@ html {
   max-width: 550px;
   border-radius: 4px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
-  margin: 120px auto;
+  margin: auto;
 }
 .logmod__close {
   display: block;
